Acomodando CU10 y agregado CU09, también en proceso